--- a/coralmaps/coral_maps.Rmd
+++ b/coralmaps/coral_maps.Rmd
@@ -94,15 +94,20 @@ if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_spp_depth_raw.csv'))) {
                  str_replace('result.', ''))
   }
   
-  ### get species list
-  data_file <- file.path(dir_data, 'spp_list_w_area_trimmed.csv')
-  spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
+  ### get paired species list
+  paired_maps_file <- file.path(dir_data, 'spp_list_w_area_trimmed.csv')
+  spp_map_pairs <- read_csv(paired_maps_file) %>%
     filter(!is.na(popn_category)) %>% ### filter out unassessed species
     filter(!is.na(sm_perc))           ### filter out NA maps
   
-  coral_spp_sid <- spp_map_pairs %>%
-    filter(str_detect(spp_group, 'CORAL')) %>%
-    .$iucn_sid
+  ### get full species list
+  spp_all_file <- file.path(dir_data, 'spp_all.csv')
+  spp_all <- read_csv(spp_all_file)
+  
+  coral_spp_sid <- spp_all %>%
+    filter(str_detect(tolower(spp_group), 'coral')) %>%
+    .$iucn_sid %>%
+    unique()
   
   spp_narr_url <- 'http://apiv3.iucnredlist.org/api/v3/species/narrative/id/%s?token=%s'
   spp_narr     <- mc_get_from_api(spp_narr_url, coral_spp_sid) 
@@ -110,16 +115,44 @@ if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_spp_depth_raw.csv'))) {
   write_csv(spp_narr, file.path(dir_git, 'coralmaps', 'coral_spp_narratives.csv'))
   
   spp_depth <- spp_narr %>%
-    select(iucn_sid = species_id, habitat)
-  write_csv(spp_depth, file.path(dir_git, 'coralmaps', 'coral_spp_depth_raw.csv'))
-  ### manually find max depths from this
-}
+    select(iucn_sid = species_id, habitat) %>%
+    mutate(paired_map = (iucn_sid %in% spp_map_pairs$iucn_sid))
 
+spp_depth1 <- spp_depth %>%
+  mutate(depth = str_extract_all(habitat, '\\d++(?:\\.\\d++)?(?=\\s*+(?:m))')) %>%
+  unnest(depth) %>%
+  group_by(iucn_sid) %>%
+  summarize(max_depth = max(as.integer(depth)))
+
+spp_depth <- spp_depth %>%
+  left_join(spp_depth1, by = 'iucn_sid') %>%
+  mutate(shallow_str = str_detect(tolower(habitat), 'shallow'),
+         shallow = max_depth <= 200 | shallow_str)
+
+write_csv(spp_depth, file.path(dir_git, 'coralmaps', 'coral_spp_depth.csv'))
+
+summary(spp_depth)
+ #    iucn_sid        habitat          paired_map        max_depth      shallow_str     shallow       
+ # Min.   :132859   Length:562         Mode :logical   Min.   :  1.00   Mode :logical   Mode:logical  
+ # 1st Qu.:133081   Class :character   FALSE:174       1st Qu.: 20.00   FALSE:194       TRUE:544      
+ # Median :133284   Mode  :character   TRUE :388       Median : 20.00   TRUE :367       NA's:18       
+ # Mean   :133283                      NA's :0         Mean   : 27.55   NA's :1                       
+ # 3rd Qu.:133486                                      3rd Qu.: 30.00                                 
+ # Max.   :133703                                      Max.   :200.00                                 
+ #                                                     NA's   :46                                     
+
+nrow(spp_depth %>% filter(max_depth > 100))
+# [1] 5
+### of 562 species, only 5 are listed as occurring below 100 m; none are below 200 m
+
+spp_depth_na <- spp_depth %>%
+  filter(is.na(shallow))
+
+### 17 species (of 396) have no depth information; one is listed as being dredged from 13 fathoms (~ 25 m)
 ```
 
-``` {r}
+``` {r extract_IUCN_cells_for_coral_pairs}
 
-spp_depth <- read_csv(file.path(dir_git, 'coralmaps', 'coral_spp_depth.csv'))
 bath_df <-  read_csv(file.path(dir_git, 'coralmaps', 'bathy_cells.csv'), col_types = 'dd') %>%
   filter(weight >= 1) %>%
   mutate(deep = 1) %>%
@@ -129,42 +162,42 @@ bath_df <-  read_csv(file.path(dir_git, 'coralmaps', 'bathy_cells.csv'), col_typ
 coral_files <- list.files(file.path(dir_anx, 'v2016', 'iucn_intersections'), 
                           pattern = 'CORAL*.*',
                           full.names = TRUE)
-iucn_coral_cells <- lapply(coral_files, read_csv) %>%
+coral_cells_iucn <- lapply(coral_files, read_csv) %>%
   bind_rows() %>%
   select(iucn_sid, loiczid = LOICZID) %>%
-  filter(iucn_sid %in% spp_depth$iucn_sid) %>%
+  filter(iucn_sid %in% spp_depth$iucn_sid[spp_depth$paired_map]) %>%
   left_join(bath_df, by = 'loiczid') %>%
   mutate(deep = ifelse(is.na(deep), 0, deep))
 
-write_csv(iucn_coral_cells, file.path(dir_git, 'coralmaps', 'iucn_coral_cells.csv'))
+write_csv(coral_cells_iucn, file.path(dir_git, 'coralmaps', 'coral_cells_iucn.csv'))
 
 ```
 
-``` {r}
+``` {r calc_areas_for_iucn_corals}
 ### calc areas
-### read hcaf to get areas; left join to iucn_coral_cells
+### read hcaf to get areas; left join to coral_cells_iucn
 ### group_by iucn_sid and depth, summarize area (deep and shallow)
 ### group_by iucn_sid, summarize total area
-iucn_coral_cells <- read_csv(file.path(dir_git, 'coralmaps', 'iucn_coral_cells.csv'))
+coral_cells_iucn <- read_csv(file.path(dir_git, 'coralmaps', 'coral_cells_iucn.csv'))
 
 hcaf <- read_csv(file.path(dir_anx, '../_raw_data/aquamaps/d2015/csv/hcaf_truncated.csv')) %>%
   select(loiczid, cellarea, oceanarea)
 
-iucn_coral_areas <- iucn_coral_cells %>%
+iucn_coral_areas <- coral_cells_iucn %>%
   left_join(hcaf, by = 'loiczid') %>%
   group_by(iucn_sid, deep) %>%
   summarize(deeparea = sum(oceanarea)) %>%
   group_by(iucn_sid) %>%
   mutate(totarea = sum(deeparea),
          shallow_pct = (totarea - deeparea)/totarea) %>%
-  filter(deep == 1) %>%
-  select(-deep) 
+  arrange(desc(deep)) %>%
+  .[!duplicated(.$iucn_sid), ]
 
-  ### get species list
-  data_file <- file.path(dir_data, 'spp_list_w_area_trimmed.csv')
-  spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
-    filter(!is.na(popn_category)) %>%   ### filter out unassessed species
-    filter(!is.na(sm_perc))             ### filter out NA maps
+### get species list
+data_file <- file.path(dir_data, 'spp_list_w_area_trimmed.csv')
+spp_map_pairs <- read.csv(data_file, stringsAsFactors = FALSE) %>%
+  filter(!is.na(popn_category)) %>%   ### filter out unassessed species
+  filter(!is.na(sm_perc))             ### filter out NA maps
 
 iucn_coral_areas <- iucn_coral_areas %>%
   left_join(spp_depth,     by = 'iucn_sid') %>%
@@ -176,27 +209,27 @@ write_csv(iucn_coral_areas, file.path(dir_git, 'coralmaps', 'iucn_coral_areas.cs
 
 
 
-``` {r}
-if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_spp_with_clipped_area.csv'))) {
+``` {r calc_overlaps}
+if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_spp_areas.csv'))) {
   
   ### get species list
-  iucn_coral_cells_clipped <- read_csv(file.path(dir_git, 'coralmaps', 'iucn_coral_cells.csv')) %>%
+  coral_cells_iucn_clipped <- read_csv(file.path(dir_git, 'coralmaps', 'coral_cells_iucn.csv')) %>%
     filter(deep == 0) %>%
     mutate(prop_area = 1)
   
   spp_coralmaps <- read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv')) %>%
-    filter(iucn_sid %in% iucn_coral_cells_clipped$iucn_sid) %>%
+    filter(iucn_sid %in% coral_cells_iucn_clipped$iucn_sid) %>%
     select(am_sid, sciname, iucn_sid)
   
   ### copy aquamaps cells to local file, keeping only corals in the paired maps
-  if(!file.exists(file.path(dir_git, 'coralmaps', 'am_coral_cells.csv'))) {
-    am_coral_cells <- read_csv(file.path(dir_anx, '../_raw_data/aquamaps/d2015/csv', 'hcaf_sp_native_trunc.csv')) %>%
+  if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_cells_am.csv'))) {
+    coral_cells_am <- read_csv(file.path(dir_anx, '../_raw_data/aquamaps/d2015/csv', 'hcaf_sp_native_trunc.csv')) %>%
       rename(am_sid = speciesid, prob = probability) %>%
       filter(am_sid %in% spp_coralmaps$am_sid) 
-    write_csv(am_coral_cells, file.path(dir_git, 'coralmaps', 'am_coral_cells.csv'))
+    write_csv(coral_cells_am, file.path(dir_git, 'coralmaps', 'coral_cells_am.csv'))
   }
   
-  am_coral_cells <- read_csv(file.path(dir_git, 'coralmaps', 'am_coral_cells.csv'))
+  coral_cells_am <- read_csv(file.path(dir_git, 'coralmaps', 'coral_cells_am.csv'))
   
   loiczid_raster_file  <- file.path(dir_git, 'shiny/data/loiczid_raster.grd')
   loiczid_raster       <- raster(loiczid_raster_file)
@@ -224,9 +257,9 @@ if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_spp_with_clipped_area.csv
     
     message(sprintf('%s. Processing species iucn_sid: %s \n   am_sid(s):  %s \n   sciname(s): %s', 
                     i, sid, paste(sids$am_sid, collapse = ', '), paste(sids$sciname, collapse = ' ')))
-    map_iucn <- get_spp_map(sid, iucn_coral_cells_clipped) %>%
+    map_iucn <- get_spp_map(sid, coral_cells_iucn_clipped) %>%
       mutate(iucn_pres = ifelse(area_iucn > 0, 1, 0))
-    map_am   <- get_spp_map(sids$am_sid, am_coral_cells) %>%
+    map_am   <- get_spp_map(sids$am_sid, coral_cells_am) %>%
       mutate(am_pres = ifelse(am_prob >= am_thresh, 1, 0))
   
     ### rasterize aquamaps map
@@ -305,23 +338,21 @@ if(!file.exists(file.path(dir_git, 'coralmaps', 'coral_spp_with_clipped_area.csv
            lg_area_pct = round(lg_area_pct, 3))
   
   print(head(spp_coralmaps))
-  write_csv(spp_coralmaps, file.path(dir_git, 'coralmaps', 'coral_spp_with_clipped_area.csv'))
+
+  
+  ### combine old and new area dataframes
+  spp_coralmaps <- spp_coralmaps %>%
+    select(iucn_sid, am_sid, sciname, area_am, 
+           area_iucn_clipped = area_iucn, area_overlap_clipped = area_overlap, 
+           sm_perc_clipped = sm_perc, sm_range_clipped = sm_range, area_ratio_clipped = area_ratio) %>%
+    left_join(read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv')) %>%
+                select(am_sid, iucn_sid, 
+                       area_iucn_raw = area_iucn, area_overlap_raw = area_overlap, 
+                       sm_perc_raw = sm_perc, sm_range_raw = sm_range, area_ratio_raw = area_ratio),
+              by = c('iucn_sid', 'am_sid'))
+  
+  write_csv(spp_coralmaps, file.path(dir_git, 'coralmaps', 'coral_spp_areas.csv'))
 }
-```
-
-``` {r}
-### combine old and new area dataframes
-spp_coralmaps <- read_csv(file.path(dir_git, 'coralmaps', 'coral_spp_with_clipped_area.csv')) %>%
-  select(iucn_sid, am_sid, sciname, area_am, 
-         area_iucn_clipped = area_iucn, area_overlap_clipped = area_overlap, 
-         sm_perc_clipped = sm_perc, sm_range_clipped = sm_range, area_ratio_clipped = area_ratio) %>%
-  left_join(read_csv(file.path(dir_data, 'spp_list_w_area_trimmed.csv')) %>%
-              select(am_sid, iucn_sid, 
-                     area_iucn_raw = area_iucn, area_overlap_raw = area_overlap, 
-                     sm_perc_raw = sm_perc, sm_range_raw = sm_range, area_ratio_raw = area_ratio),
-            by = c('iucn_sid', 'am_sid'))
-
-write_csv(spp_coralmaps, file.path(dir_git, 'coralmaps', 'coral_spp_areas.csv'))
 ```
 
 ``` {r}
@@ -345,18 +376,41 @@ iucn_coral_fixed <- spp_coralmaps %>%
   filter(!(str_detect(dist, 'clip') & !(str_detect(area, 'clip')))) %>%
   mutate(method = ifelse(str_detect(dist, 'clip'), '200m clip', 'all depth'))
 
+source(file.path(dir_git, 'data_explore/data_explore_fxns.R'))
 clipped_quads <- ggplot(iucn_coral_fixed %>%
                       filter(!iucn_sid %in% (iucn_coral_fixed %>% 
                                                filter(perc > 100) %>% 
                                                .$iucn_sid)),
                     aes(x = ratio, y = perc, group = iucn_sid)) +
-  geom_line(color = 'grey50', size = .5, alpha = .3) +
-  geom_point(aes(color = method), size = 2) +
-  labs(x = 'Area ratio (smaller/larger)',
-       y = 'Distribtion (%smaller in larger)',
-       title = 'Coral species alignment, IUCN full range vs depth-clipped')
+  ggtheme_plot + 
+  ### color the quadrant backgrounds:
+  # annotate("rect", xmin = 54.5, xmax = 100, ymin = 63, ymax = 100, 
+  #          alpha = .3, fill= "#4dac26")  + 
+  # annotate("rect", xmax = 54.5, xmin =   0, ymin = 63, ymax = 100, 
+  #          alpha = .3, fill= "#b8e186") + 
+  # annotate("rect", xmin = 54.5, xmax = 100, ymax = 63, ymin =   0, 
+  #          alpha = .3, fill= "#f1b6da") + 
+  # annotate("rect", xmax = 54.5, xmin =   0, ymax = 63, ymin =   0, 
+  #          alpha = .3, fill= "#d01c8b") +
+  scale_x_continuous(expand = c(0, 0), limits = c(0, 102),
+                     breaks = c(seq(0, 100, 25)),
+                     labels = c('0%', '25%', '50%', '75%', '100%')) +
+  scale_y_continuous(expand = c(0, 0), limits = c(0, 103),
+                     breaks = c(seq(0, 100, 25)),
+                     labels = c('0%', '25%', '50%', '75%', '100%')) +
 
-clipped_quads
+  geom_line(color = 'grey50', size = .5, alpha = .3) +
+  geom_point(aes(color = method), size = 2, alpha = .8) +
+  labs(x = 'Area ratio (smaller/larger)',
+       y = 'Distribtion (%smaller in larger)')
+
+print(clipped_quads)
+
+ggsave(plot = clipped_quads,
+       filename = file.path(dir_fig, 'scatter_quadmap_corals.png'), device = 'png',
+       width = 17.8, height = 9, units = 'cm', dpi = 600)
+
+
 ```
 
 
