--- a/ms_3_res_disc.Rmd
+++ b/ms_3_res_disc.Rmd
@@ -4,7 +4,7 @@ output: pdf_document
 
 # Results and Discussion
 
-The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
+The two datasets have notably different taxonomic (Fig. 1A) and regional (Figs. 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while species counts for AquaMaps remain robust well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  ___To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.___
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -39,25 +39,34 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 ```
 
-To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) against the area alignment (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig. 2A). 
+___Distribution alignment - overlap as proxy for common understanding; use Bayesian argument to show that these areas are high-confidence areas; area ratio as proxy for errors of commission/omission.  While we cannot know which dataset is closer to the "truth" we can make inferences based on expectations of EOO and AOO maps - is AquaMaps AOO?___
+
+_Distribution alignment - Bayesian description of higher confidence_
+_Area ratio is defined as the ratio of the smaller range area to the larger range area.  This can provide insights into commission and omission errors: a large difference in areas implies a greater number of errors in one or both datasets.  While we cannot know which dataset is closer to representing the "truth" of each species' range, we can expect that IUCN (representing EOO) will introduce more commission errors, while AquaMaps (representing AOO) is likely to reduce these at the expense of introducing more omission errors._
+
+___is this sufficiently described in methods? or revisit here?___ To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) against the area alignment (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig. 2A). 
  This analysis revealed a general negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
  AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
 The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig. S1).  
 
+
+
 The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
 
-The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (Fig. S3). 
- Ocean depth preference is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
+The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water than the AquaMaps ranges suggest.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission (Fig. S3). 
+ _Ocean depth preference is explicitly included in AquaMaps models; while depth is recommended by the IUCN as a criterion for range maps, it seems to be overlooked in some cases._  Simply clipping IUCN range maps to known depth preferences would resolve many of these commission errors.
+ 
+___from IUCN:  The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range. http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources___
 
-Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are unhelpful when the distributions are poorly aligned.
+___area ratio suggests similar commission/omission errors, but dist suggests otherwise___ Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, likely introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are unhelpful when the distributions are poorly aligned.
 
-The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
+*The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well.* ___present a solution here?___ Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
 
 
 # Implications
 
-Method-driven differences in commission and omission errors produce clear and significant disagreement in species range descriptions between AquaMaps and IUCN datasets.   To examine the implications of these differences, we repeated two recent studies, varying only the prioritization of one data set over the other.
+Method-driven differences in commission and omission errors produce clear and significant disagreement in species range descriptions between AquaMaps and IUCN datasets.  ___come back to the idea that neither represents the "truth", and different studies might choose one over the other without recognizing the implications___ To examine the implications of these differences, we repeated two recent studies, varying only the prioritization of one data set over the other.
 
 **Case Study: The Ocean Health Index**
 
